--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <div id="root"></div>
     <h1>Shubham is Here</h1>
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
-    
+    ></script> --> 
+
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
