--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <h1>Shubham is Here</h1>
+    <h1>Not Rendered </h1>
+    
     <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
@@ -16,7 +17,7 @@
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script> --> 
+    ></script>  -->
 
     <script type="module" src="./App.js"></script>
   </body>
