--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <h1>Not Rendered </h1>
+    <!-- <h1>Not Rendered </h1> -->
     
     <!-- <script
       crossorigin
